 *** QUASI-BAYESIAN DIPOLE FIELD ANALYSIS! ***
 * It is now possible to constrain muon sites with respect to atomic positions.
 * Histogramming functions added.
 *** DRAWING! ***
 * Now automatically draws bonds between atoms of a certain type, or with a certain label. Customise colour and size.
 * Kill menu to delete unwanted atoms and bonds, including 'mass kill' function.
 *** SWISHNESS! ***
 * Now just type 'mmcalc' at the Windows command line to start the program.
 * IMPORT CRYSTAL DATA FROM CIF FILES! (requires Python module PyCifRW)
 * Label atoms with element names, and subsequent characters to distinguish atoms are ignored by the visualisation routines--so F1 appears as a green fluorine, but can be distinguished when specifying muon site constraints, adding bonds etc.
 * On Windows and Linux, simply press a key, rather than key then return, to select a menu option.
 *** UNDER THE BONNET/BUGFIXES! ***
 * numpy module renamed np in main program.
 * Loop bug fixed--no longer loads every value from a CSC *.tsv value as many times as there are columns in that file! Achieved by removing a single erroneous tab.

1.0.5.1
 * Fixes accidental missed variable name change which stops the program calculating dipole fields!

1.0.5
 *** CRYSTAL STRUCTURE FILES WILL NO LONGER OPEN UNLESS THEY ARE CALLED '*-crystal-structure.json' where * is a wildcard for any name you like. MmCalc will automatically add this to new files, so there is no need to append it when asked to specify a filename. ***
 *** Truly spherical crystals will be built where alpha,beta,gamma != 90 degrees ***
 * Total redevelopment of the visualisation controls
  * A new menu devoted entirely to it
  * Customisation of atom colour, size, opacity...
  * Rationalisation of the functions controlling visualisation
  * 3D stereo options!!!
  * POV-Ray export
 * Can now read TSV files regardless of type of line break (Linux: \n, Windows: \r\n, Mac: \r) used
 * Convergence test now tries 10 points rather than 3