@@ -6,11 +6,13 @@
  * Now automatically draws bonds between atoms of a certain type, or with a certain label. Customise colour and size.
  * Kill menu to delete unwanted atoms and bonds, including 'mass kill' function.
  *** SWISHNESS! ***
- * Now just type 'mmcalc' at the Windows command line to start the program.
  * IMPORT CRYSTAL DATA FROM CIF FILES! (requires Python module PyCifRW)
  * Label atoms with element names, and subsequent characters to distinguish atoms are ignored by the visualisation routines--so F1 appears as a green fluorine, but can be distinguished when specifying muon site constraints, adding bonds etc.
  * On Windows and Linux, simply press a key, rather than key then return, to select a menu option.
+ * Now just type 'mmcalc' at the Windows command line to start the program.
+ * Perform dipole calculations with previously-generated vcrystral files.
  *** UNDER THE BONNET/BUGFIXES! ***
+ * 'current' directory now only contains one file, session.json.
  * numpy module renamed np in main program.
  * Loop bug fixed--no longer loads every value from a CSC *.tsv value as many times as there are columns in that file! Achieved by removing a single erroneous tab.
 
